2015-06-16  Yiran Wang <yiran@google.com>
	* resolve.cc disable the warning of a hidden symbol matches a
	reference to be resolved

2015-06-12  Han Shen  <shenhan@google.com>

	Fix erratum 835769.

        * aarch64.cc (AArch64_insn_utilities::BYTES_PER_INSN): Move
        defintion outside class definition.
        (AArch64_insn_utilities::AARCH64_ZR): New static constant.
        (AArch64_insn_utilities::aarch64_op31): New member.
        (AArch64_insn_utilities::aarch64_ra): New member.
        (AArch64_insn_utilities::aarch64_mac): New member.
        (AArch64_insn_utilities::aarch64_mlxl): New member.
        (ST_E_835769): New global enum member.
        (Stub_table::relocate_stubs): Add 835769 handler.
        (Stub_template_repertoire::Stub_template_repertoire): Install new
        stub type.
        (AArch64_relobj::scan_errata): This func is renamed from
        scan_erratum_843419.
        (AArch64_relobj::do_count_local_symbols): Add 835769 handler.
        (AArch64_relobj::do_relocate_sections): Add 835769 handler.
        (AArch64_relobj::scan_sections_for_stubs): Add 835769 handler.
        (Target_aarch64::scan_erratum_835769_span): New method.
        (Target_aarch64::create_erratum_stub): New method.
        (Target_aarch64::is_erratum_835769_sequence): New method.
        (Target_aarch64::scan_erratum_843419_sequence): Move part of the
        code into create_erratum_stub.
        * options.h (fix_cortex_a53_835769): New option.

2015-06-10  Han Shen  <shenhan@google.com>
	Patch for erratum-843419 (2 of 2 - fix erratum occurrences).

	Now fixing for 843419 is fully functional.

	The first part of the erratum fix CL is here -
	https://sourceware.org/ml/binutils/2015-04/msg00229.html

	* aarch64.cc(global enum): New constants representing stub types.
	(Stub_template): New POD struct.
	(Stub_template_repertoire): New class.
	(Stub_base): New class.
	(Erratum_stub): New class.
	(Reloc_stub): Refactored to be a subclass of Stub_base.